refactor: 상품 조회 경로를 DTO 프로젝션으로 전환